--- a/faqs.html
+++ b/faqs.html
@@ -126,7 +126,7 @@
           </div>
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
-              A snowflake is a dessert made with soft, creamy snow and often topped with fruit, ice cream, and other delicious treats. Our snow also comes in a variety of flavors such as Original and Thai Tea.
+              A snowflake is a dessert made with soft, creamy shaved milk and often topped with fruit, ice cream, and other delicious treats. Our snowflake bases also come in a variety of flavors such as Original, Matcha, and Thai Tea.
             </div>
           </div>
         </div>
@@ -144,17 +144,17 @@
             </div>
           </div>
         </div>
-        <div class="panel panel-default">
+         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Do you have any dairy-free or vegan items?
+                Do you work with student organizations for fundraising?
               </a>
             </h4>
           </div>
           <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="panel-body">
-              Yes, all our fruit teas are made without dairy, eggs, or honey.
+              Yes! We love working with students. Please contact us for more information about our rates.
             </div>
           </div>
         </div>
@@ -162,27 +162,27 @@
           <div class="panel-heading" role="tab" id="headingFour">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Do any of your products contain nuts?
+                What is the sizing for the menu items?
               </a>
             </h4>
           </div>
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
-              Yes, our Korean Style, Oreo, and Thai Tea Snowflakes and our Korean Style Toast contain Almonds. However, these items can be made without Almonds upon request.
+              We offer all our items in one size. Our drinks are large enough to satisfy your cravings and our Snowflakes and Toasts are made to share. 
             </div>
           </div>
         </div>
-        <div class="panel panel-default">
+         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingFive">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                Can you adjust the sweetness in my tea?
+                Do you offer any hot drinks?
               </a>
             </h4>
           </div>
           <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
             <div class="panel-body">
-              We are more than happy to make tea to your liking. When ordering, please let us know what percentage of sweetness you would prefer.
+              Yes! All our milk teas can be made hot, a perfect drink for cold winter nights.
             </div>
           </div>
         </div>
@@ -190,13 +190,13 @@
           <div class="panel-heading" role="tab" id="headingSix">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                Do you work with student organizations for fundraising or catering?
+                Can I add extras to my toast?
               </a>
             </h4>
           </div>
           <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
             <div class="panel-body">
-              Yes! Please contact us for more information about our rates.
+              Absolutely. For only $1 more per topping, you can add blueberries, mango, blueberries, banana, or ice cream. Additionally, we offer chocolate, strawberry, and vanilla ice cream.
             </div>
           </div>
         </div>
@@ -204,16 +204,59 @@
           <div class="panel-heading" role="tab" id="headingSeven">
             <h4 class="panel-title">
               <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                Is the store environmentally friendly?
+                Can you adjust the sweetness in my tea?
               </a>
             </h4>
           </div>
           <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
             <div class="panel-body">
-              Yes! All our Snowflakes and Toasts are served on glass plates and bowls. Additionally, our fruit teas are served in reusable cups. However, given the nature of our machinery, we are unable to use reuable cups for our milk-based teas.
+              We are more than happy to make tea to your liking. When ordering, please let us know what percentage of sweetness you would prefer.
             </div>
           </div>
         </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingEight">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                Do any of your products contain nuts?
+              </a>
+            </h4>
+          </div>
+          <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
+            <div class="panel-body">
+              Yes, our Korean Style, Oreo, and Thai Tea Snowflakes, and our Korean Style Toast contain almonds. However, we are happy to make your order without almonds upon request.
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingNine">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                Do you have any dairy-free or vegan items?
+              </a>
+            </h4>
+          </div>
+          <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
+            <div class="panel-body">
+              Yes, all our fruit teas are made without dairy, eggs, or honey.
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingTen">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTem" aria-expanded="false" aria-controls="collapseTen">
+                Is the store environmentally friendly?
+              </a>
+            </h4>
+          </div>
+          <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
+            <div class="panel-body">
+              Yes, all our snowflakes and toasts are served on glass plates and bowls. Additionally, our fruit teas are served in reusable cups. However, given the nature of our machinery, we are unable to use reuable cups for our milk-based teas.
+            </div>
+          </div>
+        </div>
+
       </div>
 
     </div>
