--- a/aboutus.html
+++ b/aboutus.html
@@ -82,7 +82,7 @@
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
-              creamy, soft, smooth shaved milk
+              refreshing, light desserts
             </div>
           </a>
 
