--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
-              creamy, soft, smooth shaved milk
+              refreshing, light desserts
             </div>
           </a>
 
@@ -143,7 +143,7 @@
               WHY US?
             </div>
             <div class="content">
-              We are known for our Snowflake, a milk based twist to the popular shaved ice dessert that offers a creamy, soft, and smooth texture.
+              We are known for our Snowflake, a milk based twist to the popular shaved ice dessert that offers a refreshing, light, and flavorful experience.
             </div>
 
 
@@ -257,7 +257,7 @@
           </div>
         </div>
 
-        <div class="col-sm-3 footer-col col-sm-offset-1 footer-col-right">
+        <div class="col-sm-3 footer-col col-sm-offset-2 footer-col-right">
           <div class="mu-footer-social">
             <a href="https://www.yelp.com/biz/21-c-snowflake-san-diego-3" target="_blank"><span class="fab fa-yelp"></span></a>
             <a href="https://www.instagram.com/explore/locations/323032044800449/21c-below-snowflake/" target="_blank"><span class="fab fa-instagram"></span></a>
