--- a/menu.html
+++ b/menu.html
@@ -77,7 +77,7 @@
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
-              creamy, soft, smooth shaved milk
+              refreshing, light desserts
             </div>
           </a>
 
@@ -271,28 +271,28 @@
                         <div class="block">
                           <div class="item">
                             <div class="name">Korean Style </div>
-                            <div class="price">5.49</div>
+                            <div class="price">7.99</div>
                             <div class="description">
                               with soybean powder, mochi, almonds, and red bean.
                             </div>
                           </div>
                           <div class="item">
                             <div class="name">Oreo</div>
-                            <div class="price">5.49</div>
+                            <div class="price">7.99</div>
                             <div class="description">
                               with oreo crumbs, almonds, and ice cream.
                             </div>
                           </div>
                           <div class="item">
                             <div class="name">Thai Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">7.99</div>
                             <div class="description">
                               with cheese cream, almonds, and boba.
                             </div>
                           </div>
                           <div class="item">
                             <div class="name">Cantaloupe</div>
-                            <div class="price">5.49</div>
+                            <div class="price">7.99</div>
                             <div class="description">
                               with cantaloupe and ice cream.
                             </div>
@@ -300,21 +300,21 @@
 
                           <div class="item">
                             <div class="name">Mango Cheesecake</div>
-                            <div class="price">5.49</div>
+                            <div class="price">7.99</div>
                             <div class="description">
                               with mango, cheesecake, and ice cream.
                             </div>
                           </div>
                           <div class="item">
                             <div class="name">Strawberry</div>
-                            <div class="price">5.49</div>
+                            <div class="price">7.99</div>
                             <div class="description">
                               with strawberry and ice cream.
                             </div>
                           </div>
                           <div class="item">
                             <div class="name">Berry Berry</div>
-                            <div class="price">5.49</div>
+                            <div class="price">7.99</div>
                             <div class="description">
                               with strawberry, blueberry, cranberry, and ice cream.
                             </div>
@@ -377,21 +377,21 @@
                           </div>
                           <div class="item">
                             <div class="name">Injeolmi Red Bean</div>
-                            <div class="price">5.49</div>
+                            <div class="price">5.99</div>
                             <div class="description">
                               Buttery honey toast topped with almond, soybean powder, red bean mochi, and condensed milk.
                             </div>
                           </div>
                           <div class="item">
                             <div class="name">Strawberry</div>
-                            <div class="price">5.49</div>
+                            <div class="price">6.25</div>
                             <div class="description">
                               Buttery honey toast topped with condensed milk, ice cream, strawberries, whipped cream, and chocolate and strawberry syrup.
                             </div>
                           </div>
                           <div class="item">
                             <div class="name">Mango</div>
-                            <div class="price">5.49</div>
+                            <div class="price">6.25</div>
                             <div class="description">
                               Buttery honey toast topped with mango, condensed milk, whipped cream, mango syrup, and ice cream.
                             </div>
@@ -399,7 +399,7 @@
 
                           <div class="item">
                             <div class="name">Banana</div>
-                            <div class="price">5.49</div>
+                            <div class="price">6.25</div>
                             <div class="description">
                               Buttery honey toast topped with banana, condensed milk, whipped cream, chocolate syrup, and ice cream.
                             </div>
@@ -452,40 +452,40 @@
                           <div class="item">
                             <div class="sep">Milk Tea </div>
                             <div class="name">21 Below Milk Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
                           <div class="item">
                             <div class="name">Black Sugar Milk Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
                           <div class="item">
                             <div class="name">Ice Cream Milk Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">4.59</div>
                           </div>
                           <div class="item">
                             <div class="name">Roasted Oolong Milk Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
 
 
                           <div class="item" style="padding-top: 50px;">
                             <div class="sep">Cap Tea</div>
                             <div class="name">Cheese Jasmine Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">4.59</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Cheese Osmanthus Oolong Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">4.59</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Cheese Oolong Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">4.59</div>
                           </div>
                           <div class="item">
                             <div class="name">Cheese Peach Oolong Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">4.59</div>
                           </div>
 
 
@@ -493,46 +493,46 @@
 
                             <div class="sep">Fruit Tea</div>
                             <div class="name">Passion Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">4.49</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Mango Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Grapefruit Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Lemon Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Jasmine Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
                           <div class="item">
                             <div class="name">Orange Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Lychee Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Yogurt Green Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">3.99</div>
                           </div>
 
                           <div class="item">
                             <div class="name">Oolong Tea</div>
-                            <div class="price">5.49</div>
+                            <div class="price">2.99</div>
                           </div>
                         </div>
                       </div>
