--- a/contactus.html
+++ b/contactus.html
@@ -105,7 +105,7 @@ var hourofday = date.getHours();
 
           <!--  Text based logo  -->
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo2.png" class="logoImage" />
+            <img src="img/extra/logo2.png" class="logoImage" />
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
