--- a/faqs.html
+++ b/faqs.html
@@ -78,7 +78,7 @@
 
           <!--  Text based logo  -->
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo2.png" class="logoImage" />
+            <img src="img/extra/logo2.png" class="logoImage" />
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
