--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <!--  Text based logo  -->
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo2.png" class="logoImage" />
+            <img src="img/extra/logo2.png" class="logoImage" />
             <span>-21&#176;C SNOWFLAKE
             </span>
             <div class="subtext">
@@ -106,6 +106,9 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
+          <img src="img/extra/store-slider.jpg" alt="...">
+        </div>
+        <div class="item">
           <img src="img/snowflakes/into-snowflake-2.jpg" alt="...">
         </div>
         <div class="item">
@@ -114,6 +117,7 @@
         <div class="item">
           <img src="img/teas/fruit-tea-landscape.jpg" alt="...">
         </div>
+        
       </div>
 
       <!-- Controls -->
@@ -206,7 +210,7 @@
         </div>
 
         <div class="col-sm-6 image">
-          <img src="img/extra/store-square.jpg" />
+          <img src="img/extra/troy.jpg" />
         </div>
       </div>
     </div>
