--- a/aboutus.html
+++ b/aboutus.html
@@ -114,9 +114,15 @@
         <div class="col-md-12 story-text">
           <div class="block">
             <div class="content">
+              <p class="desktop">
               Our shop was created from our love of Korean-styled desserts. We enjoyed their simplicity and unique flavors and wanted to share this experience with others. Our goal was to create a warm and welcoming environment where people could come to relax, spend time with friends, and enjoy our desserts and teas.
               <br /><br />
-              Additionally, we pride ourselves in our quality products and customer service. All our food and drinks are made with fresh ingredients and don't contain any artificial flavorings. Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience.
+              Additionally, we pride ourselves in our quality products and customer service. All our food and drinks are made with fresh ingredients and don't contain any artificial flavorings. Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience.</p>
+              <p class="mobile">
+              Our shop was created from our love of Korean-styled desserts. We enjoyed their simplicity and unique flavors and wanted to share this experience with others. <br/><br />
+              Our goal was to create a warm and welcoming environment where people could come to relax, spend time with friends, and enjoy our desserts and teas.
+              <br /><br />
+              Additionally, we pride ourselves in our quality products and customer service. All our food and drinks are made with fresh ingredients and don't contain any artificial flavorings. Furthermore, our products are prepared right before serving. This is to ensure that our customers get the best possible experience.</p>              
             </div>
           </div>
         </div>
